tdf#161844: AbsoluteScreenPixelRectangle is a closed interval

Change-Id: If52fd8e97b6b9c3eed72720b8dc7151b278a0183
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169766
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 58ed26938f254e1952dfaed4b208ad5a89b89387)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169807
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>